# recettes-api

./: .env  .env.example  Cargo.toml  Cross.toml  README.md  Rocket.toml  docker-compose.yml  haha.db  recipe copy.db  recipe.db
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
migrations/2020-04-16-034909_create_recipe/: down.sql  up.sql
migrations/2020-04-19-121854_dummy_data/: down.sql  up.sql
postgresql-init/: seed.sql
src/: error.rs  lib.rs  main.rs  models.rs  schema.rs
src/database/: mod.rs  models.rs  recipe_helper.rs  schema.rs
src/database/models/: mod.rs  model_category.rs  model_how_to_section.rs  model_how_to_section_full.rs  model_how_to_step.rs  model_ingredient.rs  model_input_url.rs  model_keyword.rs  model_recipe.rs  model_recipe_full.rs
src/database/recipe_helper/: image_converter.rs  mod.rs
src/html_parser/: mod.rs
