[package]
name = "recipes_api"
version = "0.0.1"
authors = ["Daniel Sauvé <daniel@xn--sauv-epa.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"]}
regex = "1"
okapi = { version = "0.4.0", features = ["derive_json_schema"] }
rocket = "0.4.4"
rocket_okapi = "0.4.1"
schemars = "0.7.2"
serde = { version = "1.0", features = ["derive"] }


[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]