[package]
name = "recipes_api"
version = "0.0.1"
authors = ["Daniel Sauvé <daniel@xn--sauv-epa.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
reqwest = { version = "0.10.8", features = ["blocking", "json"]}
regex = "1"
okapi = { version = "0.4.0", features = ["derive_json_schema"] }
rocket = "0.4.5"
rocket_cors = "0.5.2"
rocket_okapi = "0.5.1"
rustc-serialize = "0.3"
schemars = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12.4"
url = "2.1.1"


[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]